--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Vendor CSS Files -->
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.1.1/css/all.css" />
+
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
   <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
@@ -35,7 +37,7 @@
   <!-- ======= Header ======= -->
   <header id="header" class="fixed-top">
     <div class="container d-flex align-items-center justify-content-between">
-
+      
       <h1 class="logo"><a href="index.html">Samyak Jain</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
@@ -45,23 +47,19 @@
           <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
           <li><a class="nav-link scrollto" href="#about">About</a></li>
           <li><a class="nav-link scrollto" href="#services">Services</a></li>
-          <li><a class="nav-link scrollto " href="#work">Work</a></li>
+          <li><a class="nav-link scrollto " href="#work">Projects</a></li>
           <li><a class="nav-link scrollto " href="#blog">Blog</a></li>
-          <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
+          <li class="dropdown"><a href="#"><span>Certificates</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
-              <li><a href="#">Drop Down 1</a></li>
-              <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-right"></i></a>
-                <ul>
-                  <li><a href="#">Deep Drop Down 1</a></li>
-                  <li><a href="#">Deep Drop Down 2</a></li>
-                  <li><a href="#">Deep Drop Down 3</a></li>
-                  <li><a href="#">Deep Drop Down 4</a></li>
-                  <li><a href="#">Deep Drop Down 5</a></li>
-                </ul>
-              </li>
-              <li><a href="#">Drop Down 2</a></li>
-              <li><a href="#">Drop Down 3</a></li>
-              <li><a href="#">Drop Down 4</a></li>
+              <li><a href="https://www.coursera.org/account/accomplishments/certificate/Y28L39UYYACC">Introduction to Cloud Computing<i class="fa-solid fa-square-up-right"></i></a></li>
+              <li><a href="https://www.coursera.org/account/accomplishments/certificate/66PQVEBV6EFP">Full-stack Web Development with React Specialization <i class="fa-solid fa-square-up-right"></i></a></li>
+              <li><a href="https://www.coursera.org/account/accomplishments/specialization/certificate/EXRCRJ7CNSKN">Server-side Development with NodeJS, Express and MongoDB<i class="fa-solid fa-square-up-right"></i></a></li>
+              <li><a href="https://www.coursera.org/account/accomplishments/certificate/VGTD9DEYCDQX"> Front-End Web Development with React<i class="fa-solid fa-square-up-right"></i></a></li>
+              <li><a href="https://www.coursera.org/account/accomplishments/certificate/29ZV9E8LPA7E">  Introduction to HTML5<i class="fa-solid fa-square-up-right"></i></a></li>
+              <li><a href="https://www.coursera.org/account/accomplishments/certificate/ZY6QBELYJFE5">  Introduction to CSS3<i class="fa-solid fa-square-up-right"></i></a></li>
+              <li><a href="https://www.coursera.org/account/accomplishments/certificate/A8H3CHSCDS4U"> Interactivity with JavaScript<i class="fa-solid fa-square-up-right"></i></a></li>
+              <!-- <li><a href="https://www.coursera.org/account/accomplishments/certificate/VGTD9DEYCDQX"> Front-End Web Development with React</a></li> -->
+
             </ul>
           </li>
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
@@ -671,7 +669,7 @@
                   <div class="col-md-6">
                     <div class="title-box-2">
                       <h5 class="title-left">
-                        Send Message Us
+                        Send Us a Message 
                       </h5>
                     </div>
                     <div>
@@ -723,17 +721,17 @@
                         mollitia inventore?
                       </p>
                       <ul class="list-ico">
-                        <li><span class="bi bi-geo-alt"></span> 329 WASHINGTON ST BOSTON, MA 02108</li>
-                        <li><span class="bi bi-phone"></span> (617) 557-0089</li>
-                        <li><span class="bi bi-envelope"></span> contact@example.com</li>
+                        <li><span class="bi bi-geo-alt"></span> Delhi,India</li>
+                        <li><span class="bi bi-phone"></span> +91 8800699891</li>
+                        <li><span class="bi bi-envelope"></span> samyakjain0512@gmail.com</li>
                       </ul>
                     </div>
                     <div class="socials">
                       <ul>
-                        <li><a href=""><span class="ico-circle"><i class="bi bi-facebook"></i></span></a></li>
-                        <li><a href=""><span class="ico-circle"><i class="bi bi-instagram"></i></span></a></li>
-                        <li><a href=""><span class="ico-circle"><i class="bi bi-twitter"></i></span></a></li>
-                        <li><a href=""><span class="ico-circle"><i class="bi bi-linkedin"></i></span></a></li>
+                        <li><a href=""><span class="ico-circle"><i class="fa-brands fa-instagram"></i></i></span></a></li>
+                        <li><a href=""><span class="ico-circle"><i class="fa-brands fa-linkedin"></i></span></a></li>
+                        <li><a href=""><span class="ico-circle"><i class="fa-brands fa-telegram"></i></span></a></li>
+                        <li><a href=""><span class="ico-circle"><i class="fa-brands fa-github"></i></span></a></li>
                       </ul>
                     </div>
                   </div>
@@ -753,7 +751,7 @@
       <div class="row">
         <div class="col-sm-12">
           <div class="copyright-box">
-            <p class="copyright">&copy; Copyright <strong>DevFolio</strong>. All Rights Reserved</p>
+            <p class="copyright">&copy; Copyright <strong>SAMYAK JAIN</strong>. All Rights Reserved</p>
             <div class="credits">
               <!--
               All the links in the footer should remain intact.
