--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
   </header><!-- End Header -->
 
   <!-- ======= Hero Section ======= -->
-  <div id="hero" class="hero route bg-image" style="background-image: url(assets/img/Untitled\ design\ \(6\).png)">
+  <div id="hero" class="hero route bg-image" style="background-image: url(assets/img/DODO.png)">
     <div class="overlay-itro"></div>
     <div class="hero-content display-table">
       <div class="table-cell">
