--- a/index.html
+++ b/index.html
@@ -104,10 +104,10 @@
                     </div>
                     <div class="col-sm-6 col-md-7">
                       <div class="about-info">
-                        <p><span class="title-s">Name: </span> <span>Samyak Jain</span></p>
-                        <p><span class="title-s">Profile: </span> <span>full stack developer</span></p>
-                        <p><span class="title-s">Email: </span> <span>samyakjain0512@gmail.com</span></p>
-                        <p><span class="title-s">Phone: </span> <span>(617) 557-0089</span></p>
+                        <p><span class="title-s">Name: </span> <span><b>Samyak Jain</b></span></p>
+                        <p><span class="title-s">Profile: </span> <span>Full stack developer</span></p>
+                        <p><span class="title-s">Email: </span> <span><a href="mailto:samyakjain0512@gmail.com"><b>samyakjain0512@gmail.com</a></span></p>
+                        <p><span class="title-s">Phone: </span> <span><a href="tel:8800699891"><b>8800699891</b></a></span></p>
                       </div>
                     </div>
                   </div>
@@ -132,28 +132,28 @@
                   </div>
                 </div>
                 <div class="col-md-6">
-                  <div class="about-me pt-4 pt-md-0">
+                  <div class="about-me pt-8 pt-md-0">
                     <div class="title-box-2">
                       <h5 class="title-left">
                         About me
                       </h5>
                     </div>
                     <p class="lead">
-                      Curabitur non nulla sit amet nisl tempus convallis quis ac lectus. Curabitur arcu erat, accumsan id
-                      imperdiet et, porttitor
-                      at sem. Praesent sapien massa, convallis a pellentesque nec, egestas non nisi. Nulla
-                      porttitor accumsan tincidunt.
+                      I believe you are having a great day,
+                      A little about me, My Name is  Samyak Jain, I am born and raised in New Delhi. 
+                      I have completed my Primary and Secondary Education from<a href="https://www.mdhinternationalschool.co.in/"><b> MDH International School</b></a>
                     </p>
                     <p class="lead">
-                      Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Vivamus suscipit tortor eget felis
-                      porttitor volutpat. Vestibulum
-                      ac diam sit amet quam vehicula elementum sed sit amet dui. porttitor at sem.
+                     <b>Currently</b>, I am pursuing BCA from <b><a href="https://www.iitmjp.ac.in">Institute of Innovation in Technology and Management </a></b>
+                      
                     </p>
                     <p class="lead">
-                      Nulla porttitor accumsan tincidunt. Quisque velit nisi, pretium ut lacinia in, elementum id enim.
-                      Nulla porttitor accumsan
-                      tincidunt. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a.
+                      Being a programmer from 8th Standard, I know a good handful knowledge. Except that I have a great interest in Learning New Technology around the globe. 
                     </p>
+                    <button style="border-radius: 15px; width:150px; height:50px; background-color: red; color: beige; font-weight: 700;">
+                      <i class="fa-solid fa-download"></i>
+                          <a href="assets/img/SAMYAK JAIN RESUME UPDATED.pdf" style="text-decoration: none; color:aliceblue">RESUME</a>       
+                      <i class="fa-solid fa-file-pdf"></i></button>
                   </div>
                 </div>
               </div>
@@ -170,10 +170,10 @@
           <div class="col-sm-12">
             <div class="title-box text-center">
               <h3 class="title-a">
-                Services
+                Skills
               </h3>
               <p class="subtitle-a">
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                Every skill you acquire doubles your odds of success.
               </p>
               <div class="line-mf"></div>
             </div>
@@ -186,7 +186,7 @@
                 <span class="ico-circle"><i class="bi bi-briefcase"></i></span>
               </div>
               <div class="service-content">
-                <h2 class="s-title">Web Design</h2>
+                <h2 class="s-title">Frontend Development</h2>
                 <p class="s-description text-center">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia,
                   provident vitae! Magni
@@ -198,10 +198,10 @@
           <div class="col-md-4">
             <div class="service-box">
               <div class="service-ico">
-                <span class="ico-circle"><i class="bi bi-card-checklist"></i></span>
+                <span class="ico-circle"><i class="fa-solid fa-user-secret"></i></span>
               </div>
               <div class="service-content">
-                <h2 class="s-title">Web Development</h2>
+                <h2 class="s-title">Cyber  security</h2>
                 <p class="s-description text-center">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia,
                   provident vitae! Magni
@@ -213,10 +213,10 @@
           <div class="col-md-4">
             <div class="service-box">
               <div class="service-ico">
-                <span class="ico-circle"><i class="bi bi-bar-chart"></i></span>
+                <span class="ico-circle"><i class="fa-brands fa-python"></i></span>
               </div>
               <div class="service-content">
-                <h2 class="s-title">Photography</h2>
+                <h2 class="s-title">Python-Django</h2>
                 <p class="s-description text-center">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia,
                   provident vitae! Magni
@@ -228,10 +228,10 @@
           <div class="col-md-4">
             <div class="service-box">
               <div class="service-ico">
-                <span class="ico-circle"><i class="bi bi-binoculars"></i></span>
+                <span class="ico-circle"><i class="fa-brands fa-react"></i></span>
               </div>
               <div class="service-content">
-                <h2 class="s-title">Responsive Design</h2>
+                <h2 class="s-title">React JS</h2>
                 <p class="s-description text-center">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia,
                   provident vitae! Magni
@@ -243,10 +243,10 @@
           <div class="col-md-4">
             <div class="service-box">
               <div class="service-ico">
-                <span class="ico-circle"><i class="bi bi-brightness-high"></i></span>
+                <span class="ico-circle"><i class="fa-duotone fa-file-excel"></i></span>
               </div>
               <div class="service-content">
-                <h2 class="s-title">Graphic Design</h2>
+                <h2 class="s-title">Advance Excel</h2>
                 <p class="s-description text-center">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia,
                   provident vitae! Magni
@@ -258,10 +258,10 @@
           <div class="col-md-4">
             <div class="service-box">
               <div class="service-ico">
-                <span class="ico-circle"><i class="bi bi-calendar4-week"></i></span>
+                <span class="ico-circle"><i class="fa-solid fa-database"></i></span>
               </div>
               <div class="service-content">
-                <h2 class="s-title">Marketing Services</h2>
+                <h2 class="s-title">SQL</h2>
                 <p class="s-description text-center">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia,
                   provident vitae! Magni
@@ -285,7 +285,7 @@
                 <span class="ico-circle"><i class="bi bi-check"></i></span>
               </div>
               <div class="counter-num">
-                <p data-purecounter-start="0" data-purecounter-end="450" data-purecounter-duration="1" class="counter purecounter"></p>
+                <p data-purecounter-start="0" data-purecounter-end="45" data-purecounter-duration="1" class="counter purecounter"></p>
                 <span class="counter-text">WORKS COMPLETED</span>
               </div>
             </div>
@@ -297,7 +297,7 @@
               </div>
               <div class="counter-num">
                 <p data-purecounter-start="0" data-purecounter-end="25" data-purecounter-duration="1" class="counter purecounter"></p>
-                <span class="counter-text">YEARS OF EXPERIENCE</span>
+                <span class="counter-text">CERTIFICATIONS</span>
               </div>
             </div>
           </div>
@@ -307,8 +307,8 @@
                 <span class="ico-circle"><i class="bi bi-people"></i></span>
               </div>
               <div class="counter-num">
-                <p data-purecounter-start="0" data-purecounter-end="550" data-purecounter-duration="1" class="counter purecounter"></p>
-                <span class="counter-text">TOTAL CLIENTS</span>
+                <p data-purecounter-start="0" data-purecounter-end="46600" data-purecounter-duration="1" class="counter purecounter"></p>
+                <span class="counter-text">AUDIENCE REACH</span>
               </div>
             </div>
           </div>
@@ -318,7 +318,7 @@
                 <span class="ico-circle"><i class="bi bi-award"></i></span>
               </div>
               <div class="counter-num">
-                <p data-purecounter-start="0" data-purecounter-end="48" data-purecounter-duration="1" class="counter purecounter"></p>
+                <p data-purecounter-start="0" data-purecounter-end="10" data-purecounter-duration="1" class="counter purecounter"></p>
                 <span class="counter-text">AWARD WON</span>
               </div>
             </div>
@@ -334,7 +334,7 @@
           <div class="col-sm-12">
             <div class="title-box text-center">
               <h3 class="title-a">
-                Portfolio
+                Projects
               </h3>
               <p class="subtitle-a">
                 Lorem ipsum, dolor sit amet consectetur adipisicing elit.
@@ -723,8 +723,8 @@
                       </p>
                       <ul class="list-ico">
                         <li><span class="bi bi-geo-alt"></span> Delhi,India</li>
-                        <li><span class="bi bi-phone"></span> +91 8800699891</li>
-                        <li><span class="bi bi-envelope"></span> samyakjain0512@gmail.com</li>
+                        <li><span class="bi bi-phone"></span><a href="tel:8800699891" >+91 8800699891</a></li>
+                        <li><span class="bi bi-envelope"></span> <a href="mailto:samyakjain0512@gmail.com">samyakjain0512@gmail.com</a></li>
                       </ul>
                     </div>
                     <div class="socials">
@@ -754,12 +754,7 @@
           <div class="copyright-box">
             <p class="copyright">&copy; Copyright <strong>SAMYAK JAIN</strong>. All Rights Reserved</p>
             <div class="credits">
-              <!--
-              All the links in the footer should remain intact.
-              You can delete the links only if you purchased the pro version.
-              Licensing information: https://bootstrapmade.com/license/
-              Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=DevFolio
-            -->
+              
               Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
             </div>
           </div>
