--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
           </div>
         </div>
       </div>
-    </div><!-- End Counter Section -->
+    </div>
 
     <!-- ======= Portfolio Section ======= -->
     <section id="work" class="portfolio-mf sect-pt4 route">
