--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
           <!--<p class="display-6 color-d">Hello, world!</p>-->
           <h1 class="hero-title mb-4">I am <span style="color: #af78d7;">Samyak Jain</span>
           </h1>
-          <p class="hero-subtitle"><span class="typed" data-typed-items="Designer, Developer, Digital Marketer, Content Designer"></span></p>
+          <p class="hero-subtitle"><span class="typed" data-typed-items="Website Designer, Frontend Developer, Backend Developer, Fullstack Developer, Digital Marketer, Content Designer"></span></p>
           <!-- <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="#about" role="button">Learn More</a></p> -->
         </div>
       </div>
@@ -106,28 +106,28 @@
                       <div class="about-info">
                         <p><span class="title-s">Name: </span> <span><b>Samyak Jain</b></span></p>
                         <p><span class="title-s">Profile: </span> <span>Full stack developer</span></p>
-                        <p><span class="title-s">Email: </span> <span><a href="mailto:samyakjain0512@gmail.com"><b>samyakjain0512@gmail.com</a></span></p>
-                        <p><span class="title-s">Phone: </span> <span><a href="tel:8800699891"><b>8800699891</b></a></span></p>
+                        <p><span class="title-s">Email: </span> <span><a href="mailto:samyakjain0512@gmail.com"><b>samyakjain0512@gmail.com<i class="fa-solid fa-arrow-up-right-from-square"></i></a></span></p>
+                        <p><span class="title-s">Phone: </span> <span><a href="tel:8800699891"><b>8800699891<i class="fa-solid fa-arrow-up-right-from-square"></i></b></a></span></p>
                       </div>
                     </div>
                   </div>
                   <div class="skill-mf">
                     <p class="title-s">Skill</p>
-                    <span>HTML</span> <span class="pull-right">85%</span>
+                    <span>Web Desiging</span> <span class="pull-right">85%</span>
                     <div class="progress">
                       <div class="progress-bar" role="progressbar" style="width: 85%;" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
-                    <span>CSS3</span> <span class="pull-right">75%</span>
+                    <span>Web Developement</span> <span class="pull-right">75%</span>
                     <div class="progress">
                       <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
-                    <span>PHP</span> <span class="pull-right">50%</span>
+                    <span>Advance Excel</span> <span class="pull-right">80%</span>
                     <div class="progress">
-                      <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+                      <div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
-                    <span>JAVASCRIPT</span> <span class="pull-right">90%</span>
+                    <span>Backend </span> <span class="pull-right">60%</span>
                     <div class="progress">
-                      <div class="progress-bar" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                      <div class="progress-bar" role="progressbar" style="width: 60%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
                   </div>
                 </div>
@@ -151,9 +151,11 @@
                       Being a programmer from 8th Standard, I know a good handful knowledge. Except that I have a great interest in Learning New Technology around the globe. 
                     </p>
                     <button style="border-radius: 15px; width:150px; height:50px; background-color: red; color: beige; font-weight: 700;">
-                      <i class="fa-solid fa-download"></i>
-                          <a href="assets/img/SAMYAK JAIN RESUME UPDATED.pdf" style="text-decoration: none; color:aliceblue">RESUME</a>       
-                      <i class="fa-solid fa-file-pdf"></i></button>
+                          <a href="assets/img/SAMYAK JAIN RESUME UPDATED.pdf" style="text-decoration: none; color:aliceblue">
+                            <i class="fa-solid fa-download"></i>
+                            RESUME
+                            <i class="fa-solid fa-file-pdf"></i></button>
+                          </a>       
                   </div>
                 </div>
               </div>
@@ -243,7 +245,7 @@
           <div class="col-md-4">
             <div class="service-box">
               <div class="service-ico">
-                <span class="ico-circle"><i class="fa-duotone fa-file-excel"></i></span>
+                <span class="ico-circle"><i class="fa-solid fa-file-excel"></i></span>
               </div>
               <div class="service-content">
                 <h2 class="s-title">Advance Excel</h2>
@@ -346,15 +348,15 @@
         <div class="row">
           <div class="col-md-4">
             <div class="work-box">
-              <a href="assets/img/work-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
+              <a href="assets/img/Instagram Clonr.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
-                  <img src="assets/img/work-1.jpg" alt="" class="img-fluid">
+                  <img src="assets/img/Instagram Clonr.jpg" alt="" class="img-fluid">
                 </div>
               </a>
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <h2 class="w-title">Lorem impsum dolor</h2>
+                    <h2 class="w-title">Instagram Clone</h2>
                     <div class="w-more">
                       <span class="w-ctegory">Web Design</span> / <span class="w-date">18 Sep. 2018</span>
                     </div>
@@ -370,15 +372,15 @@
           </div>
           <div class="col-md-4">
             <div class="work-box">
-              <a href="assets/img/work-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
+              <a href="assets/img/Hotstar clone.jfif" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
-                  <img src="assets/img/work-2.jpg" alt="" class="img-fluid">
+                  <img src="assets/img/Hotstar clone.jfif" alt="" class="img-fluid">
                 </div>
               </a>
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <h2 class="w-title">Loreda Cuno Nere</h2>
+                    <h2 class="w-title">Hotstar Clone</h2>
                     <div class="w-more">
                       <span class="w-ctegory">Web Design</span> / <span class="w-date">18 Sep. 2018</span>
                     </div>
@@ -394,15 +396,15 @@
           </div>
           <div class="col-md-4">
             <div class="work-box">
-              <a href="assets/img/work-3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
+              <a href="assets/img/Netflix clone.png" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
-                  <img src="assets/img/work-3.jpg" alt="" class="img-fluid">
+                  <img src="assets/img/Netflix clone.png" alt="" class="img-fluid">
                 </div>
               </a>
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <h2 class="w-title">Mavrito Lana Dere</h2>
+                    <h2 class="w-title">Netflix Clone</h2>
                     <div class="w-more">
                       <span class="w-ctegory">Web Design</span> / <span class="w-date">18 Sep. 2018</span>
                     </div>
@@ -418,17 +420,17 @@
           </div>
           <div class="col-md-4">
             <div class="work-box">
-              <a href="assets/img/work-4.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
+              <a href="assets/img/Instagram clone Python Django.png" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
-                  <img src="assets/img/work-4.jpg" alt="" class="img-fluid">
+                  <img src="assets/img/Instagram clone Python Django.png" alt="" class="img-fluid">
                 </div>
               </a>
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <h2 class="w-title">Bindo Laro Cado</h2>
+                    <h2 class="w-title">Instagram Clone Python-Django</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Web Design</span> / <span class="w-date">18 Sep. 2018</span>
+                      <span class="w-ctegory">Web and Python Django</span> / <span class="w-date">Sep. 2022</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
@@ -442,17 +444,17 @@
           </div>
           <div class="col-md-4">
             <div class="work-box">
-              <a href="assets/img/work-5.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
+              <a href="assets/img/Portfolio Website.PNG" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
-                  <img src="assets/img/work-5.jpg" alt="" class="img-fluid">
+                  <img src="assets/img/Portfolio Website.PNG" alt="" class="img-fluid">
                 </div>
               </a>
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <h2 class="w-title">Studio Lena Mado</h2>
+                    <h2 class="w-title">Portfolio Website</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Web Design</span> / <span class="w-date">18 Sep. 2018</span>
+                      <span class="w-ctegory">Web Design</span> / <span class="w-date">July. 2022</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
@@ -474,9 +476,9 @@
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <h2 class="w-title">Studio Big Bang</h2>
+                    <h2 class="w-title">Music App Clone</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Web Design</span> / <span class="w-date">18 Sep. 2017</span>
+                      <span class="w-ctegory">Web and Python Django</span> / <span class="w-date">Sep. 2022</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
