--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
   * Author: BootstrapMade.com
   * License: https://bootstrapmade.com/license/
   ======================================================== -->
+  <script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script>
 </head>
 
 <body>
@@ -745,7 +746,8 @@
         </div>
       </div>
     </section><!-- End Contact Section -->
-
+    <div class="badge-base LI-profile-badge" data-locale="en_US" data-size="large" data-theme="light" data-type="HORIZONTAL" data-vanity="samyak-jain-55713125a" data-version="v1"><a class="badge-base__link LI-simple-link" href="https://in.linkedin.com/in/samyak-jain-55713125a?trk=profile-badge">Samyak Jain</a></div>
+              
   </main><!-- End #main -->
 
   <!-- ======= Footer ======= -->
