--- a/index.html
+++ b/index.html
@@ -679,6 +679,7 @@
                     <div>
                       <form action="forms/contact.php" method="post" role="form" class="php-email-form">
                         <div class="row">
+                          <div class="badge-base LI-profile-badge" data-locale="en_US" data-size="large" data-theme="light" data-type="HORIZONTAL" data-vanity="samyak-jain-55713125a" data-version="v1"><a class="badge-base__link LI-simple-link" href="https://in.linkedin.com/in/samyak-jain-55713125a?trk=profile-badge">Samyak Jain</a></div>
                           <div class="col-md-12 mb-3">
                             <div class="form-group">
                               <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
