--- a/index.html
+++ b/index.html
@@ -733,10 +733,10 @@
                     </div>
                     <div class="socials">
                       <ul>
-                        <li><a href=""><span class="ico-circle"><i class="fa-brands fa-instagram"></i></i></span></a></li>
-                        <li><a href=""><span class="ico-circle"><i class="fa-brands fa-linkedin"></i></span></a></li>
-                        <li><a href=""><span class="ico-circle"><i class="fa-brands fa-telegram"></i></span></a></li>
-                        <li><a href=""><span class="ico-circle"><i class="fa-brands fa-github"></i></span></a></li>
+                        <li><a href="https://www.instagram.com/samyak0512/"><span class="ico-circle"><i class="fa-brands fa-instagram"></i></i></span></a></li>
+                        <li><a href="https://www.linkedin.com/in/samyak0512/"><span class="ico-circle"><i class="fa-brands fa-linkedin"></i></span></a></li>
+                        <li><a href="https://twitter.com/SamyakJ42854765"><span class="ico-circle"><i class="fa-brands fa-twitter"></i></span></a></li>
+                        <li><a href="https://github.com/samyak0512"><span class="ico-circle"><i class="fa-brands fa-github"></i></span></a></li>
                       </ul>
                     </div>
                   </div>
