--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       <div class="table-cell">
         <div class="container">
           <!--<p class="display-6 color-d">Hello, world!</p>-->
-          <h1 class="hero-title mb-4">I am <span style="color: #af78d7;">SUPRIYA</span>
+          <h1 class="hero-title mb-4">I am <span style="color: #af78d7;">Samyak Jain</span>
           </h1>
           <p class="hero-subtitle"><span class="typed" data-typed-items="Website Designer, Frontend Developer, Backend Developer, Fullstack Developer, Digital Marketer, Content Designer"></span></p>
           <!-- <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="#about" role="button">Learn More</a></p> -->
