--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                       Being a programmer from 8th Standard, I know a good handful knowledge. Except that I have a great interest in Learning New Technology around the globe. 
                     </p>
                     <button style="border-radius: 15px; width:150px; height:50px; background-color: red; color: beige; font-weight: 700;">
-                          <a href="assets/img/SAMYAK JAIN RESUME UPDATED.pdf" style="text-decoration: none; color:aliceblue">
+                          <a href="assets/img/Samyak Jain Resume (2).pdf" style="text-decoration: none; color:aliceblue">
                             <i class="fa-solid fa-download"></i>
                             RESUME
                             <i class="fa-solid fa-file-pdf"></i></button>
