--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
           </h1>
           <p class="hero-subtitle">
             <span class="typed" data-typed-items="Website Designer, Frontend Developer, Backend Developer, Fullstack Developer, Digital Marketer, Content Designer">
-              Website Designer, Frontend Developer, Backend Developer, Fullstack Developer, Digital Marketer, Content Designer
+<!--               Website Designer, Frontend Developer, Backend Developer, Fullstack Developer, Digital Marketer, Content Designer -->
             </span></p>
           <!-- <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="#about" role="button">Learn More</a></p> -->
         </div>
