--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                     <button style="border-radius: 15px; width:150px; height:50px; background-color: red; color: beige; font-weight: 700;">
                           <a href="assets/img/Samyak Jain Resume (2).pdf" style="text-decoration: none; color:aliceblue">
                             <i class="fa-solid fa-download"></i>
-                            RESUME
+                            Resume 
                             <i class="fa-solid fa-file-pdf"></i></button>
                           </a>       
                   </div>
