--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                     </div>
                     <div class="col-sm-6 col-md-7">
                       <div class="about-info">
-                        <p><span class="title-s">Name: </span> <span><b>Samyak . Jain</b></span></p>
+                        <p><span class="title-s">Name: </span> <span><b>Samyak kJain</b></span></p>
                         <p><span class="title-s">Profile: </span> <span>Full stack developer</span></p>
                         <p><span class="title-s">Email: </span> <span><a href="mailto:samyakjain0512@gmail.com"><b>samyakjain0512@gmail.com<i class="fa-solid fa-arrow-up-right-from-square"></i></a></span></p>
                         <p><span class="title-s">Phone: </span> <span><a href="tel:8800699891"><b>8800699891<i class="fa-solid fa-arrow-up-right-from-square"></i></b></a></span></p>
